repaired wrong position of search button

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -9,6 +9,7 @@
   padding: $base-size;
   margin: 0 $base-size;
   border-radius: $radius;
+  display: inline;
   cursor: pointer;
   font-weight: 700;
   text-transform: uppercase;
