--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,8 +1,7 @@
 @import '../../styles/settings.scss';
 
 .component {
-  width: 100%;
-  display: flex;
+  display: inline;
 
   input {
     // flex-grow: 1;
