--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -318,7 +318,7 @@ textarea {
  */
 
 details {
-  display: block;
+  display: inline;
 }
 
 /*
